# texteditor

./: CMakeLists.txt  fast.bat  log.txt
src/: main.cpp
